// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollWrapper gracefully fails if no content is provided 1`] = `
Object {
  "Component": Object {
    "FadeContainer": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "ScrollContainer": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "ScrollContainer",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "ScrollContainer",
          ],
          "visible": true,
          "w": 58,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 100,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FadeContainer",
      "renderOfScreen": undefined,
      "renderToTexture": true,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FadeContainer",
      ],
      "visible": true,
      "w": 58,
      "x": 24,
      "y": 8,
      "zIndex": 0,
    },
    "Slider": Object {
      "active": false,
      "alpha": 0,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Container": Object {
          "active": false,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Bar": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Circle": Object {
                  "active": false,
                  "alpha": 0,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Circle": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Circle",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Circle",
                      ],
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 16,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0.5,
                  "mountX": 0.5,
                  "mountY": 0.5,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Circle",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Circle",
                  ],
                  "type": "Knob",
                  "visible": true,
                  "w": 16,
                  "x": 0,
                  "y": 11,
                  "zIndex": 5,
                },
                "SliderBar": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Bar": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Bar",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Bar",
                      ],
                      "texture": Object {
                        "type": "StaticCanvasTexture",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 1,
                    },
                    "Progress": Object {
                      "active": false,
                      "alpha": 0,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Progress",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Progress",
                      ],
                      "texture": Object {
                        "type": "StaticCanvasTexture",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 2,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 8,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0.5,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "SliderBar",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "SliderBar",
                  ],
                  "type": "ProgressBar",
                  "visible": true,
                  "w": 20,
                  "x": 0,
                  "y": 10,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 0,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Bar",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "Bar",
              ],
              "visible": true,
              "w": 0,
              "x": 40,
              "y": 0,
              "zIndex": 0,
            },
            "LeftArrow": Object {
              "active": false,
              "alpha": 0.5,
              "attached": true,
              "boundsMargin": null,
              "clipping": false,
              "color": "fff6f6f9",
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "LeftArrow",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "LeftArrow",
              ],
              "texture": Object {
                "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAAGKADAAQAAAABAAAAGAAAAADiNXWtAAAAi0lEQVRIDWNgGAWjIfD//38JID5Fk5AAGqwKxPeA+D/VLQCaaQLEr0CGgwBVLQCa5wbEn0EGwwDVLAAaGA3Ev2AGw2iqWAA0rBiI/8EMRaYptgBoWDeygehsci1gIlcjWfqArqZdEMFcBLSEdpGMZAntkimSJbTLaEiW0K6oQLKEdoUdzJJRemiHAAD4n+yzPWCs7QAAAABJRU5ErkJggg==",
                "type": "ImageTexture",
              },
              "visible": true,
              "w": 32,
              "x": 0,
              "y": [Function],
              "zIndex": 0,
            },
            "RightArrow": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "clipping": false,
              "color": "fff6f6f9",
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "RightArrow",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "RightArrow",
              ],
              "texture": Object {
                "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAAGKADAAQAAAABAAAAGAAAAADiNXWtAAAAg0lEQVRIDWNgGAWjIYArBP7//38KiCVwyVMsDjQcBO4BsSrFhmEzAGw8hHgFpEywqaFIDMkCEPMzELtRZCC6ZjQLQNxfQByNro5sPhYLQEL/gLiYbEORNeKwACbcDVPLBGMMOhrmVDSapkFE00imaTKlaUajaVFB28Ju0CXrUQfhDAEAEgHss6NhpLQAAAAASUVORK5CYII=",
                "type": "ImageTexture",
              },
              "visible": true,
              "w": 32,
              "x": 68,
              "y": [Function],
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": false,
          "flex": false,
          "flexItem": false,
          "h": 20,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Container",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Container",
          ],
          "visible": true,
          "w": 100,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": false,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": true,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0.5,
      "pivot": 0,
      "pivotX": 0,
      "pivotY": 0.5,
      "ref": "Slider",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "rotation": 1.5707963267948966,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "VerticalSlider",
      "tag": [Function],
      "tags": Array [
        "Slider",
      ],
      "type": "VerticalSlider",
      "visible": true,
      "w": 100,
      "x": 100,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`ScrollWrapper renders a content array 1`] = `
Object {
  "Component": Object {
    "FadeContainer": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "ScrollContainer": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "ScrollText0": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Text": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Text",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Text",
                  ],
                  "texture": Object {
                    "fontFace": "XfinityBrownBold",
                    "fontSize": 28,
                    "lineHeight": 40,
                    "maxLinesSuffix": "...",
                    "text": "Heading!",
                    "textBaseline": "bottom",
                    "textOverflow": "ellipsis",
                    "type": "TextTexture",
                    "verticalAlign": "middle",
                    "wordWrapWidth": 58,
                  },
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 2,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": true,
              "h": 40,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "ScrollText0",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "tags": Array [
                "ScrollText0",
              ],
              "type": "TextBox",
              "visible": true,
              "w": 8,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
            "ScrollText1": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Text": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Text",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Text",
                  ],
                  "texture": Object {
                    "fontFace": "DMSansRegular",
                    "fontSize": "30",
                    "lineHeight": 40,
                    "maxLinesSuffix": "...",
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu aliquam libero. Sed ipsum ligula, egestas et sollicitudin eget, pulvinar et neque. Curabitur commodo nisi sit amet ligula ultrices, a sodales ante consequat. Ut ullamcorper odio et erat sagittis volutpat. Cras consequat dolor in nisi sagittis, quis volutpat mi tempor. Praesent condimentum quis purus eget sodales. Praesent tempus suscipit felis, quis gravida massa tempor ut.",
                    "textBaseline": "bottom",
                    "textOverflow": "ellipsis",
                    "type": "TextTexture",
                    "verticalAlign": "middle",
                    "wordWrapWidth": 58,
                  },
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 2,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": true,
              "h": 320,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "ScrollText1",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "tags": Array [
                "ScrollText1",
              ],
              "type": "TextBox",
              "visible": true,
              "w": 58,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
            "ScrollText2": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": true,
              "h": 100,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "ScrollText2",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "ScrollText2",
              ],
              "texture": Object {
                "type": "RectangleTexture",
              },
              "visible": true,
              "w": 100,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": true,
          "flexItem": true,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "ScrollContainer",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "ScrollContainer",
          ],
          "visible": true,
          "w": 38,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 100,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FadeContainer",
      "renderOfScreen": undefined,
      "renderToTexture": true,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FadeContainer",
      ],
      "visible": true,
      "w": 38,
      "x": 24,
      "y": 8,
      "zIndex": 0,
    },
    "Slider": Object {
      "active": false,
      "alpha": 0,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Container": Object {
          "active": false,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Bar": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Circle": Object {
                  "active": false,
                  "alpha": 0,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Circle": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Circle",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Circle",
                      ],
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 16,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0.5,
                  "mountX": 0.5,
                  "mountY": 0.5,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Circle",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Circle",
                  ],
                  "type": "Knob",
                  "visible": true,
                  "w": 16,
                  "x": 0,
                  "y": 11,
                  "zIndex": 5,
                },
                "SliderBar": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Bar": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Bar",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Bar",
                      ],
                      "texture": Object {
                        "type": "StaticCanvasTexture",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 1,
                    },
                    "Progress": Object {
                      "active": false,
                      "alpha": 0,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Progress",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Progress",
                      ],
                      "texture": Object {
                        "type": "StaticCanvasTexture",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 2,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 8,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0.5,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "SliderBar",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "SliderBar",
                  ],
                  "type": "ProgressBar",
                  "visible": true,
                  "w": 20,
                  "x": 0,
                  "y": 10,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 0,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Bar",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "Bar",
              ],
              "visible": true,
              "w": 0,
              "x": 40,
              "y": 0,
              "zIndex": 0,
            },
            "LeftArrow": Object {
              "active": false,
              "alpha": 0.5,
              "attached": true,
              "boundsMargin": null,
              "clipping": false,
              "color": "fff6f6f9",
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "LeftArrow",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "LeftArrow",
              ],
              "texture": Object {
                "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAAGKADAAQAAAABAAAAGAAAAADiNXWtAAAAi0lEQVRIDWNgGAWjIfD//38JID5Fk5AAGqwKxPeA+D/VLQCaaQLEr0CGgwBVLQCa5wbEn0EGwwDVLAAaGA3Ev2AGw2iqWAA0rBiI/8EMRaYptgBoWDeygehsci1gIlcjWfqArqZdEMFcBLSEdpGMZAntkimSJbTLaEiW0K6oQLKEdoUdzJJRemiHAAD4n+yzPWCs7QAAAABJRU5ErkJggg==",
                "type": "ImageTexture",
              },
              "visible": true,
              "w": 32,
              "x": 0,
              "y": [Function],
              "zIndex": 0,
            },
            "RightArrow": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "clipping": false,
              "color": "fff6f6f9",
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "RightArrow",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "RightArrow",
              ],
              "texture": Object {
                "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAAGKADAAQAAAABAAAAGAAAAADiNXWtAAAAg0lEQVRIDWNgGAWjIYArBP7//38KiCVwyVMsDjQcBO4BsSrFhmEzAGw8hHgFpEywqaFIDMkCEPMzELtRZCC6ZjQLQNxfQByNro5sPhYLQEL/gLiYbEORNeKwACbcDVPLBGMMOhrmVDSapkFE00imaTKlaUajaVFB28Ju0CXrUQfhDAEAEgHss6NhpLQAAAAASUVORK5CYII=",
                "type": "ImageTexture",
              },
              "visible": true,
              "w": 32,
              "x": 68,
              "y": [Function],
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": false,
          "flex": false,
          "flexItem": false,
          "h": 20,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Container",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Container",
          ],
          "visible": true,
          "w": 100,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": false,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": true,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0.5,
      "pivot": 0,
      "pivotX": 0,
      "pivotY": 0.5,
      "ref": "Slider",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "rotation": 1.5707963267948966,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "VerticalSlider",
      "tag": [Function],
      "tags": Array [
        "Slider",
      ],
      "type": "VerticalSlider",
      "visible": true,
      "w": 100,
      "x": 80,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`ScrollWrapper renders a content string 1`] = `
Object {
  "Component": Object {
    "FadeContainer": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "ScrollContainer": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "ScrollableText": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Text": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Text",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Text",
                  ],
                  "texture": Object {
                    "fontFace": "DMSansRegular",
                    "fontSize": 28,
                    "lineHeight": 40,
                    "maxLinesSuffix": "...",
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu aliquam libero. Sed ipsum ligula, egestas et sollicitudin eget, pulvinar et neque. Curabitur commodo nisi sit amet ligula ultrices, a sodales ante consequat. Ut ullamcorper odio et erat sagittis volutpat. Cras consequat dolor in nisi sagittis, quis volutpat mi tempor. Praesent condimentum quis purus eget sodales. Praesent tempus suscipit felis, quis gravida massa tempor ut.",
                    "textBaseline": "bottom",
                    "textOverflow": "ellipsis",
                    "type": "TextTexture",
                    "verticalAlign": "middle",
                    "wordWrapWidth": 58,
                  },
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 2,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": true,
              "h": 320,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "ScrollableText",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "tags": Array [
                "ScrollableText",
              ],
              "type": "TextBox",
              "visible": true,
              "w": 58,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": true,
          "flexItem": true,
          "h": 320,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "ScrollContainer",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "ScrollContainer",
          ],
          "visible": true,
          "w": 38,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 100,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FadeContainer",
      "renderOfScreen": undefined,
      "renderToTexture": true,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FadeContainer",
      ],
      "visible": true,
      "w": 38,
      "x": 24,
      "y": 8,
      "zIndex": 0,
    },
    "Slider": Object {
      "active": false,
      "alpha": 0,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Container": Object {
          "active": false,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Bar": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Circle": Object {
                  "active": false,
                  "alpha": 0,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Circle": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Circle",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Circle",
                      ],
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 16,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0.5,
                  "mountX": 0.5,
                  "mountY": 0.5,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Circle",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Circle",
                  ],
                  "type": "Knob",
                  "visible": true,
                  "w": 16,
                  "x": 0,
                  "y": 11,
                  "zIndex": 5,
                },
                "SliderBar": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Bar": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Bar",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Bar",
                      ],
                      "texture": Object {
                        "type": "StaticCanvasTexture",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 1,
                    },
                    "Progress": Object {
                      "active": false,
                      "alpha": 0,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": false,
                      "flex": false,
                      "flexItem": false,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Progress",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Progress",
                      ],
                      "texture": Object {
                        "type": "StaticCanvasTexture",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 2,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 8,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0.5,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "SliderBar",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "SliderBar",
                  ],
                  "type": "ProgressBar",
                  "visible": true,
                  "w": 20,
                  "x": 0,
                  "y": 10,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 0,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Bar",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "Bar",
              ],
              "visible": true,
              "w": 0,
              "x": 40,
              "y": 0,
              "zIndex": 0,
            },
            "LeftArrow": Object {
              "active": false,
              "alpha": 0.5,
              "attached": true,
              "boundsMargin": null,
              "clipping": false,
              "color": "fff6f6f9",
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "LeftArrow",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "LeftArrow",
              ],
              "texture": Object {
                "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAAGKADAAQAAAABAAAAGAAAAADiNXWtAAAAi0lEQVRIDWNgGAWjIfD//38JID5Fk5AAGqwKxPeA+D/VLQCaaQLEr0CGgwBVLQCa5wbEn0EGwwDVLAAaGA3Ev2AGw2iqWAA0rBiI/8EMRaYptgBoWDeygehsci1gIlcjWfqArqZdEMFcBLSEdpGMZAntkimSJbTLaEiW0K6oQLKEdoUdzJJRemiHAAD4n+yzPWCs7QAAAABJRU5ErkJggg==",
                "type": "ImageTexture",
              },
              "visible": true,
              "w": 32,
              "x": 0,
              "y": [Function],
              "zIndex": 0,
            },
            "RightArrow": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "clipping": false,
              "color": "fff6f6f9",
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "isComponent": undefined,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "RightArrow",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": undefined,
              "tag": [Function],
              "tags": Array [
                "RightArrow",
              ],
              "texture": Object {
                "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAAGKADAAQAAAABAAAAGAAAAADiNXWtAAAAg0lEQVRIDWNgGAWjIYArBP7//38KiCVwyVMsDjQcBO4BsSrFhmEzAGw8hHgFpEywqaFIDMkCEPMzELtRZCC6ZjQLQNxfQByNro5sPhYLQEL/gLiYbEORNeKwACbcDVPLBGMMOhrmVDSapkFE00imaTKlaUajaVFB28Ju0CXrUQfhDAEAEgHss6NhpLQAAAAASUVORK5CYII=",
                "type": "ImageTexture",
              },
              "visible": true,
              "w": 32,
              "x": 68,
              "y": [Function],
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": false,
          "flex": false,
          "flexItem": false,
          "h": 20,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Container",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Container",
          ],
          "visible": true,
          "w": 100,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": false,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": true,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0.5,
      "pivot": 0,
      "pivotX": 0,
      "pivotY": 0.5,
      "ref": "Slider",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "rotation": 1.5707963267948966,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "VerticalSlider",
      "tag": [Function],
      "tags": Array [
        "Slider",
      ],
      "type": "VerticalSlider",
      "visible": true,
      "w": 100,
      "x": 80,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;
